[lib]
name = "farve"
macro = true


[package]
name = "farve"
version = "0.1.0"
edition = "2021"
authors = ["Jacob Bergholtz <cuppachino.dev@gmail.com>"]
description = "Tiny macros for owo-color'ful logging and printing"
publish = true
license = "GPL-3.0 OR Apache-2.0"

[dependencies]
owo-colors = "3.5.0"
