[lib]
name = "farve"
path = "src/lib.rs"


[package]
name = "farve"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0 OR Apache-2.0"
authors = ["Jacob Bergholtz <cuppachino.dev@gmail.com>"]
description = "Tiny macros for owo-color'ful logging and printing"
repository = "https://github.com/cuppachino/farve"
keywords = ["owo-colors",  "colors",  "logging", "levels", "macros"]
categories = ["command-line-utilities", "development-tools", "command-line-interface", "gui"]

[dependencies]
owo-colors = "3.5.0"

[badges]
maintenance = { status = "passively-maintained" }
